--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
-    "@drill4j/ui-kit": "^0.1.18",
+    "@drill4j/ui-kit": "0.1.57",
     "@redneckz/react-bem-helper": "^2.0.3",
     "@redneckz/react-dispatcher": "^0.0.6",
     "axios": "^0.19.2",
@@ -58,7 +58,7 @@
     "style-loader": "^1.1.4",
     "typescript": "^4.1.2",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.10",
+    "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-extension-reloader": "^1.1.4"
   },
